@@ -1,4 +1,4 @@
-#	$NetBSD: GENERIC32_IP2x,v 1.59 2006/11/11 18:47:11 jmmv Exp $
+#	$NetBSD: GENERIC32_IP2x,v 1.59.2.1 2007/06/06 19:21:53 bouyer Exp $
 #
 # GENERIC32_IP2x machine description file
 # 
@@ -29,7 +29,7 @@ makeoptions	TEXTADDR=0x88069000	# entry point
 
 options 	INCLUDE_CONFIG_FILE	# embed config file in kernel binary
 
-#ident		"GENERIC32-IP2x-$Revision: 1.59 $"
+#ident		"GENERIC32-IP2x-$Revision: 1.59.2.1 $"
 
 maxusers	32
 
@@ -305,6 +305,7 @@ pseudo-device	gif			# IPv[46] over IPv[46] tunnel (RFC1933)
 pseudo-device	stf			# 6to4 IPv6 over IPv4 encapsulation
 pseudo-device	vlan			# IEEE 802.1q encapsulation
 pseudo-device	bridge			# simple inter-network bridging
+pseudo-device	agr			# IEEE 802.3ad link aggregation
 #options	BRIDGE_IPF		# bridge uses IP/IPv6 pfil hooks too
 #pseudo-device	pf			# PF packet filter
 #pseudo-device	pflog			# PF log if
