@@ -1,4 +1,4 @@
-#	$NetBSD: GENERIC32_IP3x,v 1.59 2006/11/11 18:47:11 jmmv Exp $
+#	$NetBSD: GENERIC32_IP3x,v 1.59.2.1 2007/06/06 19:21:53 bouyer Exp $
 #
 # GENERIC32_IP3x machine description file
 # 
@@ -28,7 +28,7 @@ makeoptions	TEXTADDR="0x80069000"	# entry point
 
 options 	INCLUDE_CONFIG_FILE	# embed config file in kernel binary
 
-#ident		"GENERIC32_IP3x-$Revision: 1.59 $"
+#ident		"GENERIC32_IP3x-$Revision: 1.59.2.1 $"
 
 maxusers	32
 
@@ -441,6 +441,7 @@ pseudo-device	stf			# 6to4 IPv6 over IPv4 encapsulation
 pseudo-device	vlan			# IEEE 802.1q encapsulation
 pseudo-device	bridge			# simple inter-network bridging
 #options	BRIDGE_IPF		# bridge uses IP/IPv6 pfil hooks too
+pseudo-device	agr			# IEEE 802.3ad link aggregation
 #pseudo-device	pf			# PF packet filter
 #pseudo-device	pflog			# PF log if
 
